[workspace]
members = [
    "2021/day-01",
    "2021/day-02",
    "2021/day-03",
    "2021/day-04",
    "2021/day-05",
    "2021/day-06",
    "2021/day-07",
    "2021/day-08",
    "2021/day-09",
    "2021/day-10",
    "2021/day-11",
    "2021/day-12",
    "2021/day-13",
    "2021/day-14",
    "2021/day-15",
    "2021/day-16",
    "2021/day-17",
    "2021/day-18",
    "2021/day-19",
    "2021/day-20",
    "2021/day-21",
    "2021/day-22",
]